Use repositories in services