@@ -1,62 +1,79 @@
 package com.example.demo.services;
 
-import com.example.demo.models.AccountModel;
-import com.example.demo.models.enums.AccountStatus;
-import com.example.demo.models.enums.AccountType;
+import com.example.demo.entities.Account;
+import com.example.demo.entities.User;
+import com.example.demo.entities.enums.AccountStatus;
+import com.example.demo.entities.enums.AccountType;
+import com.example.demo.repositories.AccountRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.ThreadLocalRandom;
+import java.util.function.LongSupplier;
 
 @Service
 public class AccountService {
 
-    private List<AccountModel> accounts = new ArrayList<>();
-    private int currentId = 0;
+    private static final int MAX_IBAN_ATTEMPTS = 10;
 
-    public List<AccountModel> createAccountsForUser(int userId) {
-        currentId++;
-        AccountModel checking = new AccountModel(currentId, userId, generateIban(), AccountType.CHECKING,
+    private final AccountRepository accountRepository;
+    private final LongSupplier ibanNumberSource;
+
+    @Autowired
+    public AccountService(AccountRepository accountRepository) {
+        this(accountRepository, () -> ThreadLocalRandom.current().nextLong(1_000_000_000L, 9_999_999_999L));
+    }
+
+    AccountService(AccountRepository accountRepository, LongSupplier ibanNumberSource) {
+        this.accountRepository = accountRepository;
+        this.ibanNumberSource = ibanNumberSource;
+    }
+
+    @Transactional
+    public List<Account> createAccountsForUser(User user) {
+        Account checking = new Account(0, user, generateUniqueIban(), AccountType.CHECKING,
                 BigDecimal.ZERO, new BigDecimal("1000.00"), new BigDecimal("500.00"), AccountStatus.ACTIVE, LocalDateTime.now());
-        accounts.add(checking);
-        currentId++;
-        AccountModel savings = new AccountModel(currentId, userId, generateIban(), AccountType.SAVINGS,
+        Account savings = new Account(0, user, generateUniqueIban(), AccountType.SAVINGS,
                 BigDecimal.ZERO, new BigDecimal("1000.00"), new BigDecimal("500.00"), AccountStatus.ACTIVE, LocalDateTime.now());
-        accounts.add(savings);
+        accountRepository.save(checking);
+        accountRepository.save(savings);
         return List.of(checking, savings);
     }
 
-    public List<AccountModel> getAll(Integer userId, AccountType type, AccountStatus status) {
-        return accounts.stream()
+    public List<Account> getAll(Integer userId, AccountType type, AccountStatus status) {
+        return accountRepository.findAll().stream()
                 .filter(a -> userId == null || a.getUserId() == userId)
                 .filter(a -> type == null || a.getType() == type)
                 .filter(a -> status == null || a.getStatus() == status)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public AccountModel getByIban(String iban) {
-        return accounts.stream().filter(a -> a.getIban().equals(iban)).findFirst().orElse(null);
+    public Account getByIban(String iban) {
+        return accountRepository.findByIban(iban);
     }
 
-    public List<AccountModel> getByUserId(int userId) {
-        return accounts.stream().filter(a -> a.getUserId() == userId).collect(Collectors.toList());
+    public List<Account> getByUserId(int userId) {
+        return accountRepository.findByUser_Id(userId);
     }
 
-    public AccountModel updateLimits(String iban, BigDecimal absoluteTransferLimit, BigDecimal dailyTransferLimit) {
-        accounts = accounts.stream().map(a -> {
-            if (a.getIban().equals(iban)) {
-                if (absoluteTransferLimit != null) a.setAbsoluteTransferLimit(absoluteTransferLimit);
-                if (dailyTransferLimit != null) a.setDailyTransferLimit(dailyTransferLimit);
-            }
-            return a;
-        }).collect(Collectors.toList());
-        return getByIban(iban);
+    public Account updateLimits(String iban, BigDecimal absoluteTransferLimit, BigDecimal dailyTransferLimit) {
+        Account account = getByIban(iban);
+        if (account == null) return null;
+        if (absoluteTransferLimit != null) account.setAbsoluteTransferLimit(absoluteTransferLimit);
+        if (dailyTransferLimit != null) account.setDailyTransferLimit(dailyTransferLimit);
+        return accountRepository.save(account);
     }
 
-    private String generateIban() {
-        return "NL" + String.format("%02d", (currentId % 99) + 1) + "BANK" + String.format("%010d", currentId);
+    private String generateUniqueIban() {
+        for (int attempt = 0; attempt < MAX_IBAN_ATTEMPTS; attempt++) {
+            long num = ibanNumberSource.getAsLong();
+            String iban = "NL" + String.format("%02d", (num % 99) + 1) + "BANK" + String.format("%010d", num);
+            if (accountRepository.findByIban(iban) == null) return iban;
+        }
+        throw new IllegalStateException("Could not generate unique IBAN after " + MAX_IBAN_ATTEMPTS + " attempts");
     }
 }
